# civicos

./: .env.example  .gitignore  AI_BUILD.md  CIVICOS_FINAL.md  README.md  plan.txt
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1e26b1a9b2d2_init_four_tables.py
backend/app/: config.py  db.py  main.py  models.py  schemas.py  seed.py
backend/app/agents/: ambulance.py  coordinator.py  forecast.py  graph.py  hospital.py  incident.py  police.py  state.py  trace_utils.py  traffic.py
backend/app/routers/: admin.py  counterfactual.py  events.py  forecast.py  incidents.py  kpi.py  pdf.py  resources.py
backend/app/utils/: broadcaster.py  demo_data.py  distance.py  llm.py  priority.py
backend/tests/: test_graph.py
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/: App.tsx  index.css  main.tsx  router.tsx
frontend/src/components/: AgentFeed.tsx  IncidentForm.tsx  IncidentList.tsx  KPIDashboard.tsx  KPITicker.tsx  Layout.tsx  Map.tsx  Timeline.tsx
frontend/src/hooks/: useIncidents.ts  useResources.ts  useSSE.ts
frontend/src/lib/: api.ts
frontend/src/routes/: incident.$id.tsx
frontend/src/store/: cityStore.ts
frontend/src/types/: index.ts
